# interro-claw

./: .env.example  .gitignore  LICENSE  README.md  README_ARCHITECTURE.md  README_FEATURES.md  __init__.py  agent_tools.py  cli.py  config.py  context_chunker.py  dep_graph.py  file_selector.py  guardrails.py  hitl.py  llm_client.py  mcp_server.py  memory.py  memory_cli.py  model_router.py  orchestrator.py  out.html  profiler.py  project_context.py  pyproject.toml  result_verifier.py  sentry_integration.py  skills_manager.py  task_queue.py  telemetry.py
.github/workflows/: publish.yml
agents/: __init__.py  architect_agent.py  backend_agent.py  base_agent.py  consolidator_agent.py  frontend_agent.py  ops_agent.py  planner_agent.py  refactor_agent.py  security_agent.py  test_agent.py
context_engine/: __init__.py  engine.py
dag_scheduler/: __init__.py  scheduler.py
delegation/: __init__.py  protocol.py
graph_engine/: __init__.py  engine.py
guardrails_v2/: __init__.py  enhanced.py  snapshots.py
indexer/: __init__.py  file_indexer.py
memory/: __init__.py  long_term.py  short_term.py  working.py
memory/global/: longterm.sqlite
memory/projects/default/: working_memory.sqlite
memory/projects/goal/: working_memory.sqlite
memory/runtime/BackendAgent/: task-001.json  task-002.json  task-003.json
memory/runtime/PlannerAgent/: PlannerAgent_1315732770288.json
sandbox/: __init__.py  runner.py
skills/: azure-deployment.md  backend-architecture.md  devops-cicd.md  frontend-standards.md  planning-decomposition.md  python-best-practices.md  refactoring-patterns.md  security-guidelines.md  system-architecture.md  testing-strategy.md  ui-ux-design.md
